# esp32-fmo-companion

./: .gitignore  CMakeLists.txt  LICENSE  README.md  sdkconfig.defaults
components/lv_porting/: CMakeLists.txt  lv_port_disp.c  lv_port_disp.h  lv_port_indev.c
components/lvgl/: lv_conf.h
components/lvgl/env_support/cmake/: esp.cmake
components/lvgl_esp32_drivers/: CMakeLists.txt  lvgl_helpers.c  lvgl_helpers.h
components/lvgl_esp32_drivers/lvgl_tft/: esp_lcd_backlight.c  ili9341.c  st7789.c
main/: CMakeLists.txt  app_config.h  app_power_save.c  app_power_save.h  app_settings.c  app_settings.h  app_ui.c  app_ui.h  audio_output.c  audio_output.h  audio_ws.c  audio_ws.h  battery_monitor.c  battery_monitor.h  board_config.h  bt_audio.c  bt_audio.h  event_parser.c  event_parser.h  idf_component.yml  main.c  station_parser.c  station_parser.h  ui_async.c  ui_async.h  ui_icons.c  ui_icons.h  wifi_manager.c  wifi_manager.h
main/fonts/: EN_BIG.c  clock_font.c  font12.c  font18.c  font28.c  station_font.c  status_font.c
